--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -147,3 +147,48 @@ jobs:
           name: server-coverage-file-${{ github.sha }}
           path: ${{ env.working-directory }}/coverage/coverage-final.json
           retention-days: 3
+
+  coverage_upload:
+    needs: [server_test, client_test]
+    runs-on: ubuntu-latest
+    environment: CI
+    name: CodeCov upload
+
+    steps:
+      - name: "⬇️ Download the client test coverage report"
+        uses: actions/download-artifact@v3
+        with:
+          name: client-coverage-file-${{ github.sha }}
+
+      - name: "📜 Copy the client coverage file"
+        run: |
+          mv coverage-final.json coverage-final-client.json
+
+      - name: "⬇️ Download the server test coverage report"
+        uses: actions/download-artifact@v3
+        with:
+          name: server-coverage-file-${{ github.sha }}
+
+      - name: "📜 Copy the server coverage file"
+        run: |
+          mv coverage-final.json coverage-final-server.json
+
+      - name: "🔀 Merge the coverage reports"
+        run: npx istanbul-merge --out coverage-final.json ./coverage-final-server.json ./coverage-final-client.json
+
+      - name: "⬆️ Comment test coverage report"
+        uses: AthleticNet/comment-test-coverage@1.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: ./coverage-final.json
+          title: Woofer Test Coverage
+
+      - name: "🌪️ Publish to CodeCov"
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          flags: unittests
+          files: ./coverage-final.json
+          name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
+          # verbose: true # optional (default = false)
