--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "socket.io-client": "4.4.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
@@ -75,6 +76,8 @@
     "jest-watch-typeahead": "^0.6.5",
     "joi": "^17.6.0",
     "mongoose": "^6.2.10",
-    "supertest": "^6.2.2"
+    "process": "^0.11.10",
+    "supertest": "^6.2.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
