--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.4'
 services:
-
   ##############################################################################
   # React app
   ##############################################################################
@@ -9,10 +8,23 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+      args:
+        - NODE_ENV=$NODE_ENV
+        - SERVER_URL=$SERVER_URL
+        - PORT=$PORT
+        - MONGODB_URL=$MONGODB_URL
+        - SKIP_PREFLIGHT_CHECK=$SKIP_PREFLIGHT_CHECK
+        - REACT_APP_FIREBASE_API_KEY=$REACT_APP_FIREBASE_API_KEY
+        - REACT_APP_FIREBASE_AUTH_DOMAIN=$REACT_APP_FIREBASE_AUTH_DOMAIN
+        - REACT_APP_FIREBASE_PROJECT_ID=$REACT_APP_FIREBASE_PROJECT_ID
+        - REACT_APP_FIREBASE_STORAGE_BUCKET=$REACT_APP_FIREBASE_STORAGE_BUCKET
+        - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=$REACT_APP_FIREBASE_MESSAGING_SENDER_ID
+        - REACT_APP_FIREBASE_APP_ID=$REACT_APP_FIREBASE_APP_ID
+        - REACT_APP_FIREBASE_MEASUREMENT_ID=$REACT_APP_FIREBASE_MEASUREMENT_ID
     image: spencerlepine/woofer-client
     restart: always
     env_file:
-      - ./.env
+      - .env
     ports:
       - "3000:3000"
     volumes:
@@ -30,7 +42,7 @@ services:
     image: spencerlepine/woofer-server
     restart: always
     env_file:
-      - ./.env
+      - .env
     ports:
       - "5000:5000"
     volumes:
