pass env as args for docker client build

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
 NODE_ENV=development
-SERVER_URL=http://localhost:5000
+SERVER_URL="http://localhost:5000"
 PORT=5000
-MONGODB_URL=mongodb://127.0.0.1:27017/test
+MONGODB_URL="mongodb://127.0.0.1:27017/test"
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_FIREBASE_API_KEY=asdf
-REACT_APP_FIREBASE_AUTH_DOMAIN=asdf
-REACT_APP_FIREBASE_PROJECT_ID=asdf
-REACT_APP_FIREBASE_STORAGE_BUCKET=asdf
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=asdf
-REACT_APP_FIREBASE_APP_ID=asdf
-REACT_APP_FIREBASE_MEASUREMENT_ID=asdf
+REACT_APP_FIREBASE_API_KEY="asdf"
+REACT_APP_FIREBASE_AUTH_DOMAIN="asdf"
+REACT_APP_FIREBASE_PROJECT_ID="asdf"
+REACT_APP_FIREBASE_STORAGE_BUCKET="asdf"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID="asdf"
+REACT_APP_FIREBASE_APP_ID="asdf"
+REACT_APP_FIREBASE_MEASUREMENT_ID="asdf"
