handle .env file for Client build CI

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          mv .env.sample ${{ env.working-directory }}/.env
+          cp .env.sample .env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v3
@@ -73,7 +73,7 @@ jobs:
 
       - name: "⚙️ Generate .env file"
         run: |
-          mv .env.sample ${{ env.working-directory }}/.env
+          cp .env.sample .env
 
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v3
