working production EC2 deployment (#56)
* use valid action badge links

* add staging job to production workflow

* add EC2 public ip address link

* refactor env file access for client Docker image

* coverage upload in NODE CI

* modify webpack env variable access

* tweak docker building args configuration

* pass env as args for docker client build

* handle .env file for Client build CI

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   build_docker_client:
-    name: "🐳 Build/Publish Docker (CLIENT) Image"
+    name: "🐳 Build Docker (CLIENT) Image"
     runs-on: ubuntu-latest
     env:
      working-directory: client
@@ -37,7 +37,6 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
-          cp .env ./${{ env.working-directory }}/.env
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache
@@ -93,7 +92,6 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
-          cp .env ./${{ env.working-directory }}/.env
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache-a
@@ -146,8 +144,6 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
-          cp .env ./client/.env
-          cp .env ./server/.env
 
       # - name: "⚡ Cache/Build Docker Client layers"
       #   id: docker-cache-client
