--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,9 +5,36 @@ RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
+ARG NODE_ENV
+ENV NODE_ENV ${NODE_ENV}
+ARG SERVER_URL
+ENV SERVER_URL ${SERVER_URL}
+ARG PORT
+ENV PORT ${PORT}
+ARG MONGODB_URL
+ENV MONGODB_URL ${MONGODB_URL}
+ARG SKIP_PREFLIGHT_CHECK
+ENV SKIP_PREFLIGHT_CHECK ${SKIP_PREFLIGHT_CHECK}
+ARG REACT_APP_FIREBASE_API_KEY
+ENV REACT_APP_FIREBASE_API_KEY ${REACT_APP_FIREBASE_API_KEY}
+ARG REACT_APP_FIREBASE_AUTH_DOMAIN
+ENV REACT_APP_FIREBASE_AUTH_DOMAIN ${REACT_APP_FIREBASE_AUTH_DOMAIN}
+ARG REACT_APP_FIREBASE_PROJECT_ID
+ENV REACT_APP_FIREBASE_PROJECT_ID ${REACT_APP_FIREBASE_PROJECT_ID}
+ARG REACT_APP_FIREBASE_STORAGE_BUCKET
+ENV REACT_APP_FIREBASE_STORAGE_BUCKET ${REACT_APP_FIREBASE_STORAGE_BUCKET}
+ARG REACT_APP_FIREBASE_MESSAGING_SENDER_ID
+ENV REACT_APP_FIREBASE_MESSAGING_SENDER_ID ${REACT_APP_FIREBASE_MESSAGING_SENDER_ID}
+ARG REACT_APP_FIREBASE_APP_ID
+ENV REACT_APP_FIREBASE_APP_ID ${REACT_APP_FIREBASE_APP_ID}
+ARG REACT_APP_FIREBASE_MEASUREMENT_ID
+ENV REACT_APP_FIREBASE_MEASUREMENT_ID ${REACT_APP_FIREBASE_MEASUREMENT_ID}
+
+
+
+
 COPY package.json .
 COPY package-lock.json .
-COPY .env .
 RUN npm install
 
 COPY . .
