--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -10,6 +10,10 @@ jobs:
   node_ci:
     name: Node CI
     uses: ./.github/workflows/node_ci.yml
+    with:
+      ENVIRONMENT: CI
+    secrets:
+      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
   docker_ci:
     name: Docker CI
@@ -83,8 +87,8 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKERHUB_REPO }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
-          cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
+          # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
+          # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   build_docker_server:
     needs: [node_ci, docker_ci]
@@ -154,8 +158,8 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKERHUB_REPO }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
-          cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
+          # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
+          # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   verify_ec2:
     needs: [build_docker_server, build_docker_client]
